find_package(Doxygen)
if(${DOXYGEN_FOUND})
    set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
    set(DOXYGEN_GENERATE_TREEVIEW YES)
    set(DOXYGEN_TEMPLATE_RELATIONS YES)
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_EXTRACT_PRIVATE YES)
    set(DOXYGEN_SOURCE_BROWSER YES)
    set(DOXYGEN_INTERACTIVE_SVG YES)
    set(DOXYGEN_DISTRIBUTE_GROUP_DOC YES)

    doxygen_add_docs(qmcpack_doxygen ${PROJECT_SOURCE_DIR}/src
        ${PROJECT_SOURCE_DIR}/README.md)
endif()
