[project]
name = "nexus"
version = "0.1.0"
description = "Automated workflow manager for DFT & QMC calculations"
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
   "numpy (>=1.13.0, <1.20.0) ; python_version == '3.6.*'",
   "numpy (>=1.14.5, <1.22.0) ; python_version == '3.7.*'",
   "numpy (>=1.18.0, <1.25.0) ; python_version == '3.8.*'",
   "numpy (>=1.19.3, <2.1.0)  ; python_version == '3.9.*'",
   "numpy (>=1.21.0, <2.3.0)  ; python_version == '3.10.*'",
   "numpy (>=1.23.2) ; python_version == '3.11.*'",
   "numpy (>=1.26.0) ; python_version == '3.12.*'",
   "numpy (>=2.1.0) ; python_version == '3.13.*'",
   "numpy (>=2.3.0) ; python_version == '3.14.*'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]

qol = [
    "scipy (>=0.19.0, <1.6.0)  ; python_version == '3.6.*'",
    "scipy (>=1.0.0,  <1.8.0)  ; python_version == '3.7.*'",
    "scipy (>=1.4.0,  <1.11.0) ; python_version == '3.8.*'",
    "scipy (>=1.5.*,  <1.14.0) ; python_version == '3.9.*'",
    "scipy (>=1.7.*,  <1.16.0) ; python_version == '3.10.*'",
    "scipy (>=1.9.*)  ; python_version == '3.11.*'",
    "scipy (>=1.11.*) ; python_version == '3.12.*'",
    "scipy (>=1.14.*) ; python_version == '3.13.*'",
    "scipy (>=1.17.*) ; python_version == '3.14.*'",
    "h5py>=2.7.0",
    "matplotlib>=2.0.2",
    "spglib>=1.12.0.post3",
]

full = [
    "cif2cell>=2.1.0", # pycifrw is required by cif2cell
    "pydot>=1.2.4",
    "seekpath>=1.9.0",
]

[project.urls]
Repository = "https://github.com/QMCPACK/qmcpack"
