[project]
name = "nexus"
version = "2.2.9"
description = "Automated workflow manager for DFT & QMC calculations"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy (>=1.22.0, !=2.4.0)" # Numpy 2.4.0 was yanked from PyPI for breaking backwards compatibility
]

[project.scripts]
eshdf        = "nexus._bin:eshdf"
nxs-redo     = "nexus._bin:nxs_redo"
nxs-sim      = "nexus._bin:nxs_sim"
nxs-test     = "nexus._bin:nxs_test"
qdens        = "nexus._bin:qdens"
qdens-radial = "nexus._bin:qdens_radial"
qmca         = "nexus._bin:qmca"
qmc-fit      = "nexus._bin:qmc_fit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "coverage[toml]>=7.13.5; python_version < '3.11'",
    "coverage>=7.13.5; python_version >= '3.11'",
    "pytest-cov>=7.0.0",
    "pytest-order>=1.3.0",
]

[project.optional-dependencies]

full = [
    "scipy>=1.8.0",
    "h5py>=3.6.0",
    "matplotlib>=3.3.0",
    "spglib>=1.16.0",
    "cif2cell>=2.1.0", # pycifrw is required by cif2cell
    "pydot>=2.0.0",
    "seekpath>=2.0.0",
]

[project.urls]
Repository = "https://github.com/QMCPACK/qmcpack"

[tool.coverage.run]
patch = ["subprocess"]
parallel = true
omit = [
    "nexus/tests/*",
    "nexus/examples/*",
]

[tool.coverage.report]
omit = [
    "nexus/tests/*",
    "nexus/examples/*",
]

[tool.pytest.ini_options]
#addopts = ["--cov=nexus", "--cov-report=xml"]
testpaths = ["nexus/tests"]
xfail_strict = true
